--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="https://res.cloudinary.com/dx6zgsncl/image/upload/v1632807224/Lucky/Icon_logo_SVG_transparent_hon7fm.svg" />
+  <!-- <link rel="shortcut icon" href="https://res.cloudinary.com/dx6zgsncl/image/upload/v1632807224/Lucky/Icon_logo_SVG_transparent_hon7fm.svg" /> -->
+  <link rel="icon" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
   <link rel="stylesheet" href="/assets/fonts/simple-line-icons/css/simple-line-icons.css">
